# ChainerPruner

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  setup.cfg  setup.py
chainerpruner/: __init__.py  graph.py  mask.py  node.py  pruner.py  trace.py
chainerpruner/graph/: __init__.py  graph.py  node.py
chainerpruner/graph/chainer/: graph.py  trace.py
chainerpruner/graph/pytorch/: graph.py  trace.py
chainerpruner/masks/: __init__.py  normmask.py
chainerpruner/pruning/network_slimming/: __init__.py  chainer.py  network_slimming.py  pytorch.py  sparsity_penalty.py
chainerpruner/pruning/psfp/: __init__.py  chainer.py  psfp.py
chainerpruner/rebuild/: __init__.py  calc_pruning_connection.py  mapping.py  rebuild.py  rebuildlink.py  reinitialize.py  same_io_channels_layers.py  utils.py
chainerpruner/rebuild/chainer/: mapping.py  same_io_channels_layers.py
chainerpruner/rebuild/chainer/links/connection/: convolution_2d.py  (+3 more)
chainerpruner/rebuild/links/: __init__.py  mapping.py  rebuildlink.py
chainerpruner/rebuild/links/connection/: convolution_2d.py  depthwise_convolution_2d.py  linear.py  seblock.py
chainerpruner/rebuild/links/normalization/: batch_normalization.py
chainerpruner/rebuild/pytorch/: __init__.py  mapping.py  same_io_channels_layers.py
chainerpruner/rebuild/pytorch/modules/: batchnorm.py  conv.py  linear.py
chainerpruner/serializers/: __init__.py  npz.py
chainerpruner/serializers/chainer/: npz.py
chainerpruner/serializers/pytorch/: __init__.py  module.py
chainerpruner/testing/: typing.py
chainerpruner/utils/: __init__.py  cost.py  framework.py
docker/: Dockerfile  Dockerfile.dev  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  install.rst
docs/source/reference/: graph.rst  index.rst  masks.rst  pruner.rst  pruning.rst  rebuild.rst  serializers.rst  utils.rst
examples/network_slimming/: train_mnist.py  train_mnist_chainer.py  train_mnist_pytorch.py
examples/psfp/: train_mnist.py  train_mnist_chainer.py  train_mnist_pytorch.py
examples/tutorials/: model_benchmark.ipynb  pruning_resnet.ipynb
examples_tests/: run.sh
examples_tests/network_slimming/: train_mnist.sh
examples_tests/psfp/: train_mnist.sh
tests/: test_pruner.py
tests/masks/: test_normmask.py
tests/rebuild/: test_rebuild.py
tests/rebuild/chainer/: test_pruning_connection.py
tests/rebuild/pytorch/: test_rebuild.py
tests/serializers_tests/chainer/: test_npz.py
tests/testutils/: __init__.py
tests/utils/: test_cost.py
(+1 files in other folders)
