[metadata]
name = chainerpruner
version = attr: chainerpruner.__version__
url = https://github.com/DeNA/ChainerPruner
author = Tomohiro Kato
author_email = tomohiro.kato@dena.com
maintainer = Tomohiro Kato
maintainer_email = tomohiro.kato@dena.com
license = MIT License
description = ChainerPruner: Channel Pruning framework for Chaienr
long_description = file: README.md
long_description_content_type=”text/markdown”
;classifiers =
;entry_points =

[options]
packages = find:

# Original code forked from MIT licensed chainer project
# https://raw.githubusercontent.com/chainer/chainer/v5.1.0/setup.cfg
[flake8]
exclude = .eggs,*.egg,build,caffe_pb2.py,caffe_pb3.py,docs,.git
# TODO(niboshi): Fix violating code and remove E241 and E226
ignore = E741,W503,W504,E241,E226

[pep8]
exclude = .eggs,*.egg,build,docs,.git

[tool:pytest]
filterwarnings= ignore::FutureWarning
                error::DeprecationWarning
                error::PendingDeprecationWarning
                # importing old SciPy is warned because it tries to
                # import nose via numpy.testing
                ignore::DeprecationWarning:scipy\._lib\._numpy_compat
                # importing stats from old SciPy is warned because it tries to
                # import numpy.testing.decorators
                ignore::DeprecationWarning:scipy\.stats\.morestats
                # Theano 0.8 causes DeprecationWarnings. It is fixed in 0.9.
                ignore::DeprecationWarning:theano\.configparser
                # Theano 1.0.2 passes a deprecated argument to distutils during
                # importing ``theano.gof`` module.
                # Without this configuration, the DeprecationWarning would be
                # treated as an exception, and therefore the import would fail,
                # causing AttributeError in the subsequent uses of
                # ``theano.gof``. (#4810)
                ignore::DeprecationWarning:theano\.gof\.cmodule
                # ``collections.MutableSequence`` in protobuf is warned by
                # Python 3.7.
                ignore::DeprecationWarning:google\.protobuf\.internal
                # Importing abcs from ``collections`` in h5py is warned by
                # Python 3.7.
                ignore::DeprecationWarning:h5py\._hl\.base
testpaths = tests docs
python_files = test_*.py
python_classes = Test
python_functions = test
minversion = 3.5
addopts = --doctest-modules